# LLMArchitecture

./: LICENSE  README.md  pyproject.toml  wikipedia_ai.txt
ConceptualExperiments/: tokenization.ipynb
