[project]
name = "llmarchitecture"
version = "0.1.0"
description = "Modular code for building LLM from scratch."
authors = [
    {name = "maheshbabu9199",email = "maheshbabu9199@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
